sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: '<-' expected but '=' found.
for (i=0 -> n by 1) {
      ^AlgInsertionSort:8: error: illegal start of simple expression
}
^