sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
var n:Int=getNombreValeurs()

for (i=0 -> n by 1) {
	
}
}
